--- a/templates/tuning/chopper-tuning.cfg.template
+++ b/templates/tuning/chopper-tuning.cfg.template
@@ -93,6 +93,9 @@ gcode:
     {% set stepper = params.STEPPER|default("unknown") %}
     {% if printer["gcode_macro _ON_STALL_DETECTED"].tuning_active %}
         M118 !!! STALL DETECTED on {{'{'}}stepper{{'}'}} - aborting chopper test !!!
+        {% if printer["gcode_macro _CHOPPER_TUNE_STATE"] is defined %}
+            SET_GCODE_VARIABLE MACRO=_CHOPPER_TUNE_STATE VARIABLE=last_result VALUE='"STALL"'
+        {% endif %}
         _CHOPPER_ABORT
     {% else %}
         M118 WARNING: Stall detected on {{'{'}}stepper{{'}'}}
@@ -143,12 +146,24 @@ gcode:
         {% endif %}
     {% endif %}
 
+[gcode_macro _CHOPPER_TUNE_STATE]
+description: Track chopper tuning state for debugging and analysis
+variable_last_result: "none"
+variable_current_phase: "idle"
+variable_tests_completed: 0
+gcode:
+    # State tracking macro - variables can be set by other macros
+    # This macro exists to prevent runtime errors when setting state variables
+
 [gcode_macro _CHOPPER_ABORT]
 description: Emergency abort chopper tuning
 gcode:
     M118 !!! CHOPPER TUNING ABORTED !!!
     {% if printer["gcode_macro _ON_STALL_DETECTED"] is defined %}
         SET_GCODE_VARIABLE MACRO=_ON_STALL_DETECTED VARIABLE=tuning_active VALUE=False
+    {% endif %}
+    {% if printer["gcode_macro _CHOPPER_TUNE_STATE"] is defined %}
+        SET_GCODE_VARIABLE MACRO=_CHOPPER_TUNE_STATE VARIABLE=last_result VALUE='"ABORTED"'
     {% endif %}
     _CHOPPER_RESTORE_LIMITS
     # Stop all motion
@@ -273,35 +288,91 @@ gcode:
 # ─────────────────────────────────────────────────────────────────────────────
 
 [gcode_macro _CHOPPER_OPTIMIZE]
-description: Iterate through chopper parameters at target speeds
+description: Iterate through chopper parameters at target speeds (phased optimization)
 variable_current_test: 0
 variable_total_tests: 0
+variable_best_tpfd: 8
+variable_best_tbl: 2
+variable_best_toff: 3
 gcode:
     {% set stepper = params.STEPPER %}
     {% set speeds = params.SPEEDS|default("50,100") %}
+    {% set phase = params.PHASE|default("all") %}
 
-    # TPFD values to test (most impactful for mid-range resonance)
+    # Phase A: TPFD values (most impactful for mid-range resonance)
     {% set tpfd_values = [0, 4, 8, 12] %}
 
-    # TBL/TOFF combinations (affects chopper frequency)
+    # Phase B: TBL/TOFF combinations (affects chopper frequency)
     {% set tbl_values = [1, 2] %}
     {% set toff_values = [3, 4] %}
 
+    # Phase C: Hysteresis fine-tuning
+    {% set hstrt_values = [4, 5, 6] %}
+    {% set hend_values = [2, 3, 4, 5] %}
+
     M118 Starting parameter optimization for {{'{'}}stepper{{'}'}}
     M118 Target speeds: {{'{'}}speeds{{'}'}} mm/s
-    M118 Testing {{'{'}}tpfd_values|length * tbl_values|length * toff_values|length{{'}'}} combinations
 
-    # Test all combinations
-    {% for tpfd in tpfd_values %}
+    {% if phase == "all" or phase == "a" %}
+        # Phase A: Find best TPFD
+        M118 === Phase A: TPFD optimization ===
+        M118 Testing TPFD values: {{'{'}}tpfd_values|join(", "){{'}'}}
+        {% if printer["gcode_macro _CHOPPER_TUNE_STATE"] is defined %}
+            SET_GCODE_VARIABLE MACRO=_CHOPPER_TUNE_STATE VARIABLE=current_phase VALUE='"phase_a_tpfd"'
+        {% endif %}
+        {% for tpfd in tpfd_values %}
+            M118 Phase A: Testing TPFD={{'{'}}tpfd{{'}'}}
+            _CHOPPER_TEST_COMBO STEPPER={{'{'}}stepper{{'}'}} SPEEDS="{{'{'}}speeds{{'}'}}" TPFD={{'{'}}tpfd{{'}'}} TBL=2 TOFF=3 HSTRT=5 HEND=3
+        {% endfor %}
+        M118 Phase A complete. Run: CHOPPER_ANALYZE --mode optimize --phase a
+        M118 Then continue with: _CHOPPER_OPTIMIZE STEPPER={{'{'}}stepper{{'}'}} SPEEDS="{{'{'}}speeds{{'}'}}" PHASE=b TPFD=<best_tpfd>
+    {% endif %}
+
+    {% if phase == "all" or phase == "b" %}
+        # Phase B: Optimize TBL/TOFF with best TPFD
+        {% set phase_b_tpfd = params.TPFD|default(printer["gcode_macro _CHOPPER_OPTIMIZE"].best_tpfd|default(8))|int %}
+        M118 === Phase B: TBL/TOFF optimization (TPFD={{'{'}}phase_b_tpfd{{'}'}}) ===
+        M118 Testing TBL/TOFF combinations
+        {% if printer["gcode_macro _CHOPPER_TUNE_STATE"] is defined %}
+            SET_GCODE_VARIABLE MACRO=_CHOPPER_TUNE_STATE VARIABLE=current_phase VALUE='"phase_b_tbl_toff"'
+        {% endif %}
         {% for tbl in tbl_values %}
             {% for toff in toff_values %}
-                _CHOPPER_TEST_COMBO STEPPER={{'{'}}stepper{{'}'}} SPEEDS="{{'{'}}speeds{{'}'}}" TPFD={{'{'}}tpfd{{'}'}} TBL={{'{'}}tbl{{'}'}} TOFF={{'{'}}toff{{'}'}} HSTRT=5 HEND=3
+                M118 Phase B: Testing TBL={{'{'}}tbl{{'}'}} TOFF={{'{'}}toff{{'}'}}
+                _CHOPPER_TEST_COMBO STEPPER={{'{'}}stepper{{'}'}} SPEEDS="{{'{'}}speeds{{'}'}}" TPFD={{'{'}}phase_b_tpfd{{'}'}} TBL={{'{'}}tbl{{'}'}} TOFF={{'{'}}toff{{'}'}} HSTRT=5 HEND=3
             {% endfor %}
         {% endfor %}
-    {% endfor %}
+        M118 Phase B complete. Run: CHOPPER_ANALYZE --mode optimize --phase b
+        M118 Then continue with: _CHOPPER_OPTIMIZE STEPPER={{'{'}}stepper{{'}'}} SPEEDS="{{'{'}}speeds{{'}'}}" PHASE=c TPFD={{'{'}}phase_b_tpfd{{'}'}} TBL=<best_tbl> TOFF=<best_toff>
+    {% endif %}
 
-    M118 Parameter sweep complete
-    M118 Run: CHOPPER_ANALYZE --mode optimize
+    {% if phase == "all" or phase == "c" %}
+        # Phase C: Fine-tune HSTRT/HEND with best from previous phases
+        {% set phase_c_tpfd = params.TPFD|default(printer["gcode_macro _CHOPPER_OPTIMIZE"].best_tpfd|default(8))|int %}
+        {% set phase_c_tbl = params.TBL|default(printer["gcode_macro _CHOPPER_OPTIMIZE"].best_tbl|default(2))|int %}
+        {% set phase_c_toff = params.TOFF|default(printer["gcode_macro _CHOPPER_OPTIMIZE"].best_toff|default(3))|int %}
+        M118 === Phase C: Hysteresis fine-tuning ===
+        M118 Using TPFD={{'{'}}phase_c_tpfd{{'}'}} TBL={{'{'}}phase_c_tbl{{'}'}} TOFF={{'{'}}phase_c_toff{{'}'}}
+        {% if printer["gcode_macro _CHOPPER_TUNE_STATE"] is defined %}
+            SET_GCODE_VARIABLE MACRO=_CHOPPER_TUNE_STATE VARIABLE=current_phase VALUE='"phase_c_hysteresis"'
+        {% endif %}
+        {% for hstrt in hstrt_values %}
+            {% for hend in hend_values %}
+                M118 Phase C: Testing HSTRT={{'{'}}hstrt{{'}'}} HEND={{'{'}}hend{{'}'}}
+                _CHOPPER_TEST_COMBO STEPPER={{'{'}}stepper{{'}'}} SPEEDS="{{'{'}}speeds{{'}'}}" TPFD={{'{'}}phase_c_tpfd{{'}'}} TBL={{'{'}}phase_c_tbl{{'}'}} TOFF={{'{'}}phase_c_toff{{'}'}} HSTRT={{'{'}}hstrt{{'}'}} HEND={{'{'}}hend{{'}'}}
+            {% endfor %}
+        {% endfor %}
+        M118 Phase C complete. Run: CHOPPER_ANALYZE --mode optimize --phase c
+    {% endif %}
+
+    {% if phase == "all" %}
+        M118 ════════════════════════════════════════════════════════════════════
+        M118 All optimization phases complete!
+        M118 Run: CHOPPER_ANALYZE --mode optimize
+        M118 ════════════════════════════════════════════════════════════════════
+    {% else %}
+        M118 Phase {{'{'}}phase|upper{{'}'}} complete
+    {% endif %}
 
 [gcode_macro _CHOPPER_TEST_COMBO]
 description: Test a single parameter combination
