fix(docker): correct Dockerfile paths for repo root context
- Dockerfile.backend: use web/backend/ paths instead of backend/
- Dockerfile.frontend: use web/frontend/ paths instead of frontend/
- docker-compose.yml: use context: .. for both services
- Remove deprecated 'version' key from compose file

All Dockerfiles now expect the build context to be the repository root,
which allows proper access to templates/, schema/, and scripts/ directories.

--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -1,10 +1,11 @@
-version: '3.8'
+# Docker Compose for gschpoozi web configurator
+# Run from repository root: docker compose -f web/docker-compose.yml up --build
 
 services:
   frontend:
     build:
-      context: .
-      dockerfile: Dockerfile.frontend
+      context: ..
+      dockerfile: web/Dockerfile.frontend
     ports:
       - "3000:80"
     depends_on:
