--- a/web/Dockerfile.backend
+++ b/web/Dockerfile.backend
@@ -1,4 +1,5 @@
 # Backend Dockerfile
+# Build context should be the repository root (not web/)
 FROM python:3.11-slim
 
 WORKDIR /app
@@ -9,18 +10,18 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for caching
-COPY backend/requirements.txt ./
+COPY web/backend/requirements.txt ./
 
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy backend code
-COPY backend/ ./
+COPY web/backend/ ./
 
 # Copy project templates and scripts (needed for generation)
-COPY ../templates /project/templates
-COPY ../schema /project/schema
-COPY ../scripts /project/scripts
+COPY templates /project/templates
+COPY schema /project/schema
+COPY scripts /project/scripts
 
 ENV PYTHONPATH="/project/scripts"
 
