--- a/schema/config-sections.yaml
+++ b/schema/config-sections.yaml
@@ -1913,26 +1913,28 @@ common:
       # ═══════════════════════════════════════════════════════════════════════════════
       variable_load_temp: {{ macros.load_temp | default(220) }}
       variable_load_length: {{ macros.load_length | default(100) }}
-      variable_load_speed: {{ macros.load_speed | default(300) }}
+      # Speeds are stored as mm/s (wizard UI). Macros convert to G-code feedrate (F) internally.
+      # Backwards compatible: if a legacy value looks like a feedrate (>100), it is converted.
+      variable_load_speed: {{ macros.load_speed | default(5.0) }}
       variable_load_prime: {{ macros.load_prime | default(50) }}
-      variable_load_prime_speed: {{ macros.load_prime_speed | default(150) }}
+      variable_load_prime_speed: {{ macros.load_prime_speed | default(2.5) }}
 
       # ═══════════════════════════════════════════════════════════════════════════════
       # FILAMENT UNLOAD
       # ═══════════════════════════════════════════════════════════════════════════════
       variable_unload_temp: {{ macros.unload_temp | default(220) }}
       variable_unload_length: {{ macros.unload_length | default(100) }}
-      variable_unload_speed: {{ macros.unload_speed | default(1800) }}
+      variable_unload_speed: {{ macros.unload_speed | default(30.0) }}
       variable_unload_tip_shape: {{ 'True' if (macros.unload_tip_shape | default(true)) else 'False' }}
-      # Tip shaping tuning (units: mm and mm/min)
+      # Tip shaping tuning (units: mm and mm/s; converted to G-code feedrate (F) in macros)
       variable_unload_tip_prime_length: {{ macros.unload_tip_prime_length | default(10.0) }}
-      variable_unload_tip_prime_speed: {{ macros.unload_tip_prime_speed | default(300) }}
+      variable_unload_tip_prime_speed: {{ macros.unload_tip_prime_speed | default(5.0) }}
       variable_unload_tip_quick_retract_length: {{ macros.unload_tip_quick_retract_length | default(10.0) }}
-      variable_unload_tip_quick_retract_speed: {{ macros.unload_tip_quick_retract_speed | default(3600) }}
+      variable_unload_tip_quick_retract_speed: {{ macros.unload_tip_quick_retract_speed | default(60.0) }}
       variable_unload_tip_ram_length: {{ macros.unload_tip_ram_length | default(5.0) }}
-      variable_unload_tip_ram_speed: {{ macros.unload_tip_ram_speed | default(300) }}
+      variable_unload_tip_ram_speed: {{ macros.unload_tip_ram_speed | default(5.0) }}
       variable_unload_tip_short_retract_length: {{ macros.unload_tip_short_retract_length | default(15.0) }}
-      variable_unload_tip_short_retract_speed: {{ macros.unload_tip_short_retract_speed | default(3600) }}
+      variable_unload_tip_short_retract_speed: {{ macros.unload_tip_short_retract_speed | default(60.0) }}
 
       # ═══════════════════════════════════════════════════════════════════════════════
       # FILAMENT SENSOR
@@ -2810,9 +2812,17 @@ common:
           {% set cfg = printer["gcode_macro _MACRO_CONFIG"] %}
           {% set TEMP = params.TEMP|default(cfg.load_temp)|float %}
           {% set LENGTH = params.LENGTH|default(cfg.load_length)|float %}
-          {% set SPEED = params.SPEED|default(cfg.load_speed)|int %}
+          {% set SPEED_MM_S = params.SPEED|default(cfg.load_speed)|float %}
           {% set PRIME = params.PRIME|default(cfg.load_prime)|float %}
-          {% set PRIME_SPEED = params.PRIME_SPEED|default(cfg.load_prime_speed)|int %}
+          {% set PRIME_SPEED_MM_S = params.PRIME_SPEED|default(cfg.load_prime_speed)|float %}
+
+          # Backwards compatibility: legacy configs stored filament speeds as raw feedrates.
+          {% if SPEED_MM_S > 100 %}
+              {% set SPEED_MM_S = SPEED_MM_S / 60.0 %}
+          {% endif %}
+          {% if PRIME_SPEED_MM_S > 100 %}
+              {% set PRIME_SPEED_MM_S = PRIME_SPEED_MM_S / 60.0 %}
+          {% endif %}
 
           # Save state
           SAVE_GCODE_STATE NAME=LOAD_FILAMENT_state
@@ -2827,10 +2837,10 @@ common:
           M83  ; Relative extrusion
 
           # Fast load (bowden section if applicable)
-          G1 E{LENGTH} F{SPEED}
+          G1 E{LENGTH} F{(SPEED_MM_S * 60.0)|int}
 
           # Slow prime (hotend section)
-          G1 E{PRIME} F{PRIME_SPEED}
+          G1 E{PRIME} F{(PRIME_SPEED_MM_S * 60.0)|int}
 
           # Small retract to prevent ooze
           G1 E-5 F1800
@@ -2850,7 +2860,12 @@ common:
           {% set cfg = printer["gcode_macro _MACRO_CONFIG"] %}
           {% set TEMP = params.TEMP|default(cfg.unload_temp)|float %}
           {% set LENGTH = params.LENGTH|default(cfg.unload_length)|float %}
-          {% set SPEED = params.SPEED|default(cfg.unload_speed)|int %}
+          {% set SPEED_MM_S = params.SPEED|default(cfg.unload_speed)|float %}
+
+          # Backwards compatibility: legacy configs stored filament speeds as raw feedrates.
+          {% if SPEED_MM_S > 100 %}
+              {% set SPEED_MM_S = SPEED_MM_S / 60.0 %}
+          {% endif %}
 
           SAVE_GCODE_STATE NAME=UNLOAD_FILAMENT_state
 
@@ -2865,17 +2880,32 @@ common:
 
           {% if cfg.unload_tip_shape %}
               # Tip-shaping sequence (reduces stringing on reload)
-              G1 E{cfg.unload_tip_prime_length} F{cfg.unload_tip_prime_speed}      ; Prime
-              G1 E-{cfg.unload_tip_quick_retract_length} F{cfg.unload_tip_quick_retract_speed}    ; Quick retract
-              G1 E{cfg.unload_tip_ram_length} F{cfg.unload_tip_ram_speed}       ; Small push (ram)
-              G1 E-{cfg.unload_tip_short_retract_length} F{cfg.unload_tip_short_retract_speed}    ; Short retract
+              {% set TIP_PRIME_MM_S = cfg.unload_tip_prime_speed|float %}
+              {% set TIP_QR_MM_S = cfg.unload_tip_quick_retract_speed|float %}
+              {% set TIP_RAM_MM_S = cfg.unload_tip_ram_speed|float %}
+              {% set TIP_SR_MM_S = cfg.unload_tip_short_retract_speed|float %}
+
+              # Backwards compatibility for legacy feedrate values
+              {% if TIP_PRIME_MM_S > 100 %}{% set TIP_PRIME_MM_S = TIP_PRIME_MM_S / 60.0 %}{% endif %}
+              {% if TIP_QR_MM_S > 100 %}{% set TIP_QR_MM_S = TIP_QR_MM_S / 60.0 %}{% endif %}
+              {% if TIP_RAM_MM_S > 100 %}{% set TIP_RAM_MM_S = TIP_RAM_MM_S / 60.0 %}{% endif %}
+              {% if TIP_SR_MM_S > 100 %}{% set TIP_SR_MM_S = TIP_SR_MM_S / 60.0 %}{% endif %}
+
+              G1 E{cfg.unload_tip_prime_length} F{(TIP_PRIME_MM_S * 60.0)|int}      ; Prime
+              G1 E-{cfg.unload_tip_quick_retract_length} F{(TIP_QR_MM_S * 60.0)|int}    ; Quick retract
+              G1 E{cfg.unload_tip_ram_length} F{(TIP_RAM_MM_S * 60.0)|int}       ; Small push (ram)
+              G1 E-{cfg.unload_tip_short_retract_length} F{(TIP_SR_MM_S * 60.0)|int}    ; Short retract
           {% else %}
               # Simple prime only (still tunable)
-              G1 E{cfg.unload_tip_prime_length} F{cfg.unload_tip_prime_speed}
+              {% set TIP_PRIME_MM_S = cfg.unload_tip_prime_speed|float %}
+              {% if TIP_PRIME_MM_S > 100 %}
+                  {% set TIP_PRIME_MM_S = TIP_PRIME_MM_S / 60.0 %}
+              {% endif %}
+              G1 E{cfg.unload_tip_prime_length} F{(TIP_PRIME_MM_S * 60.0)|int}
           {% endif %}
 
           # Main retract
-          G1 E-{LENGTH} F{SPEED}
+          G1 E-{LENGTH} F{(SPEED_MM_S * 60.0)|int}
 
           M82  ; Absolute extrusion
           G92 E0
