--- a/schema/config-sections.yaml
+++ b/schema/config-sections.yaml
@@ -450,11 +450,10 @@ extruder:
     max_extrude_cross_section: {{ extruder.max_extrude_cross_section | default(5) }}
     pressure_advance: {{ extruder_presets[extruder.extruder_type].default_pa | default(0.04) }}
     pressure_advance_smooth_time: 0.040
-    {% if extruder.control == 'mpc' %}
+    {% set _klipper_variant = (klipper.variant if klipper is defined and klipper.variant is defined else 'standard') %}
+    {% if _klipper_variant == 'kalico' and extruder.control == 'mpc' %}
     # MPC (Model Predictive Control) - Kalico feature
     control: mpc
-    heater_power: {{ extruder.heater_power | default(50) }}
-    cooling_fan: fan
     {% else %}
     # PID control and PID values are in printer.cfg override sections (not here to avoid SAVE_CONFIG conflicts)
     # Run PID_CALIBRATE HEATER=extruder TARGET=240, then SAVE_CONFIG
